worked on guns and magazines